# googletest_ex

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/app_1/: CMakeLists.txt
app/app_1/src/: main.cpp
app/app_2/: CMakeLists.txt
app/app_2/src/: main.cpp
lib/: CMakeLists.txt
lib/dynamic_array/: CMakeLists.txt
lib/dynamic_array/inc/: dynamic_array.hpp  exception.hpp
lib/dynamic_array/src/: dynamic_array.cpp
lib/dynamic_array/test/: test1.cpp
